--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+  <%= render 'layouts/header' %>
+  <%= render 'layouts/flash_messages' %>
     <%= yield %>
   </body>
 </html>
