--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
-  <h1>
+  <h1 class="text-center">
   Welcome, <%= current_user.email %>!
   </h1>
 <% else %>
-  <h1>
-  Hello, World!
+  <h1 class="text-center">
+  Welcome, sign in!
   </h1>
 <% end %>
