--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,43 +1,44 @@
 <% if user_signed_in? %>
-<nav class="navbar navbar-expand-lg navbar-light bg-dark btn">
-  <a class="navbar-brand text-white" href="/">LoginApp</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item btn">
-        <%= link_to "Users", "#", class: "nav-link text-white" %>
-      </li>
-      <li class="nav-item btn">
-        <%= link_to "Features", "#", class: "nav-link text-white" %>
-      </li>
-      <li class="nav-item btn ">
-        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link text-white" %>
-      </li>
-    </ul>
-  </div>
-</nav>
+<div class="bg-info">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <h1 class="navbar-brand text-white" href="/">LoginApp</h1>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item btn">
+          <%= link_to "About", "#", class: "nav-link text-white" %>
+        </li>
+        <li class="nav-item btn">
+          <%= link_to "Profile", "#", class: "nav-link text-white" %>
+        </li>
+        <li class="nav-item btn ">
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link text-white" %>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 <% else %>
-<nav class="navbar navbar-expand-lg navbar-light bg-dark btn">
-  <a class="navbar-brand text-white" href="/">LoginApp</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item btn">
-        <%= link_to "Users", "#", class: "nav-link text-white" %>
-      </li>
-      <li class="nav-item btn">
-        <%= link_to "Sign Up", new_user_registration_path, class: "nav-link text-white" %>
-      </li>
-      <li class="nav-item btn">
-        <%= link_to "Sign In", new_user_session_path, class: "nav-link text-white" %>
-      </li>
-    </ul>
-  </div>
-</nav>
-
+<div class="bg-info">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark btn">
+    <a class="navbar-brand text-white" href="/">LoginApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="nav">
+        <li class="nav-item btn">
+          <%= link_to "About", "#", class: "nav-link text-white" %>
+        </li>
+        <li class="nav-item btn">
+          <%= link_to "Sign Up", new_user_registration_path, class: "nav-link text-white" %>
+        </li>
+        <li class="nav-item btn">
+          <%= link_to "Sign In", new_user_session_path, class: "nav-link text-white" %>
+        </li>
+      </ul>
+    </div>
+  </nav>
 <% end %>
