--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="bg-info">
   <head>
     <title>LoginApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
